--- a/html/header/editgroup.html
+++ b/html/header/editgroup.html
@@ -1,5 +1,10 @@
 <div id="dark"></div>
-    <div id="titel">Edit Group</div>
+    <div id="titel">
+        Edit Group
+        <span class="right" id="edit_group_delete">
+            <i class="material-icons">cancel</i>
+        </span>
+</div>
     <div id="secondarytitel">
         <span class="left" id="edit_group_cancel">
             <i class="material-icons">keyboard_arrow_left</i>
