--- a/html/header/edituser.html
+++ b/html/header/edituser.html
@@ -1,5 +1,9 @@
 <div id="dark"></div>
-    <div id="titel">Edit Kontakt</div>
+    <div id="titel">Edit Kontakt
+        <span class="right" id="edit_user_delete">
+            <i class="material-icons">cancel</i>
+        </span>
+</div>
     <div id="secondarytitel">
         <span class="left" id="edit_user_cancel">
             <i class="material-icons">keyboard_arrow_left</i>
