--- a/html/header/showuser.html
+++ b/html/header/showuser.html
@@ -1,11 +1,12 @@
 <div id="dark"></div>
+<div id="titel"></div>
 <div id="secondarytitel">
     <span class="left" id="mainscreen">
     <i class="material-icons">keyboard_arrow_left</i>
     <i class="material-icons">list</i>
     </span>
     <span class="right" id="edit_user">
-    <i class="material-icons">keyboard_arrow_left</i>
-    <i class="material-icons">list</i>
+    <i class="material-icons">edit</i>
+    <i class="material-icons">keyboard_arrow_right</i>
     </span>
 </div>
