--- a/html/header/showgroup.html
+++ b/html/header/showgroup.html
@@ -6,7 +6,6 @@
             <i class="material-icons">keyboard_arrow_right</i>
         </span>
         <span class="left" id="edit_group">
-            <i class="material-icons">person_add</i>
-            <i class="material-icons">keyboard_arrow_right</i>
+            <i class="material-icons">edit</i>
         </span>
 </div>
