--- a/html/header/mainscreen.html
+++ b/html/header/mainscreen.html
@@ -1,5 +1,8 @@
 <div id="dark"></div>
-    <div id="titel">Simple Contacts</div>
+    <div id="titel">Simple Contacts
+        <span class="right">
+        <i class="material-icons">highlight_off</i></span>
+</div>
     <div id="secondarytitel">
         <span class="right" id="add_user">
             <i class="material-icons">person_add</i>
