--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -3,7 +3,7 @@
     <input type="password" id="password" value="password">
     <input type="password" id="password2" style="display: none;">
     <button id="login">Login</button>
-    <button onclick="signup()" id="signup">Singup</button>
+    <button id="signup">Singup</button>
 </div>
 
 
