--- a/html/header/editgroup.html
+++ b/html/header/editgroup.html
@@ -1,6 +1,6 @@
 <div id="dark"></div>
     <div id="titel">
-        Edit Group
+        Gruppe Bearbeiten
         <span class="right" id="edit_group_delete">
             <i class="material-icons">cancel</i>
         </span>
