--- a/html/header/mainscreen.html
+++ b/html/header/mainscreen.html
@@ -1,6 +1,6 @@
 <div id="dark"></div>
     <div id="titel">Simple Contacts
-        <span class="right">
+        <span class="right" id="sign_out">
         <i class="material-icons">highlight_off</i></span>
 </div>
     <div id="secondarytitel">
