--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -1,6 +1,6 @@
 <div>
-    <input type="email" id="email" value="denideni2@gmx.ch">
-    <input type="password" id="password" value="password">
+    <input type="email" id="email">
+    <input type="password" id="password">
     <input type="password" id="password2" style="display: none;">
     <button id="login">Login</button>
     <button id="signup">Singup</button>
