Icon oben Rechts

--- a/html/header/editgroup.html
+++ b/html/header/editgroup.html
@@ -2,7 +2,7 @@
     <div id="titel">
         Gruppe Bearbeiten
         <span class="right" id="edit_group_delete">
-            <i class="material-icons">cancel</i>
+            <i id="obenrechts" class="material-icons">delete_forever</i>
         </span>
 </div>
     <div id="secondarytitel">
