--- a/html/header/edituser.html
+++ b/html/header/edituser.html
@@ -1,7 +1,7 @@
 <div id="dark"></div>
     <div id="titel">Kontakt bearbeiten
         <span class="right" id="edit_user_delete">
-            <i class="material-icons">delete_forever</i>
+            <i id="obenrechts" class="material-icons">delete_forever</i>
         </span>
 </div>
     <div id="secondarytitel">
