--- a/html/pages/editgroup.html
+++ b/html/pages/editgroup.html
@@ -1,4 +1,4 @@
-<img class="editprofile" src="img/group.png" alt="Profilbild" id="group_img">
+<img class="editprofile profilepicture" src="img/group.png" alt="Profilbild" id="group_img">
 <div class="form">
     <ul class="list">
         <li class="list__item">
