--- a/html/pages/edituser.html
+++ b/html/pages/edituser.html
@@ -1,4 +1,4 @@
- <img class="editprofile" src="img/profile.png" alt="Profilbild" id="contact_img" >
+ <img class="editprofile profilepicture" src="img/profile.png" alt="Profilbild" id="contact_img" >
 <div id="contact_id"></div>
     <div class="form">
         <ul class="list">
