--- a/html/pages/grouplist.html
+++ b/html/pages/grouplist.html
@@ -1,6 +1,6 @@
 <ul class="list">
     <li class="list__item" id="group_list">
-        <div class="list__item__left"> <img class="list__item__thumbnail" src="img/group.png" alt="Cute kitten" id="group_img"> </div>
+        <div class="list__item__left"> <img class="list__item__thumbnail profilepicture" src="img/group.png" alt="Cute kitten" id="group_img"> </div>
         <div class="list__item__center">
             <div class="list__item__title" id="group_name"></div>
             <div class="list__item__subtitle"></div>
