--- a/html/pages/showuser.html
+++ b/html/pages/showuser.html
@@ -1,4 +1,4 @@
- <img class="editprofile" src="img/profile.png" alt="Profilbild" id="contact_img">
+ <img class="editprofile profilepicture" src="img/profile.png" alt="Profilbild" id="contact_img">
 
  <div class="button-bar" style="width:90%; margin-left: 5%; margin-bottom: 20px;">
     <div class=" button-bar__item">
