--- a/html/pages/mainscreen.html
+++ b/html/pages/mainscreen.html
@@ -1,7 +1,7 @@
 <ul class="list">
     <li class="list__item" id="contact_list">
         <div class="list__item__left">
-            <img class="list__item__thumbnail" src="img/profile.png" alt="Cute kitten" id="contact_img">
+            <img class="list__item__thumbnail profilepicture" src="img/profile.png" alt="Cute kitten" id="contact_img">
         </div>
         <div class="list__item__center">
             <div class="list__item__title" id="contact_name"></div>
