--- a/html/header/editgroup.html
+++ b/html/header/editgroup.html
@@ -1,7 +1,7 @@
 <div id="dark"></div>
     <div id="titel">
         Gruppe Bearbeiten
-        <span class="left" id="edit_group_member_delete">
+        <span class="right" id="edit_group_member_delete">
             <i class="material-icons">person_outline</i>
         </span>
         <span class="right" id="edit_group_delete">
