--- a/html/header/showgroup.html
+++ b/html/header/showgroup.html
@@ -6,6 +6,7 @@
             <i class="material-icons">keyboard_arrow_right</i>
         </span>
         <span class="left" id="edit_group">
+                <i class="material-icons">keyboard_arrow_left</i>
             <i class="material-icons">edit</i>
         </span>
 </div>
