--- a/html/pages/edituser.html
+++ b/html/pages/edituser.html
@@ -32,6 +32,10 @@
                     <input type="text" class="text-input" placeholder="PLZ/ Ort" id="contact_place">
                 </div>
             </li>
+            <li class="list__item">
+                    <div class="list__item__center">
+                    </div>
+                </li>
         </ul>
     </div>
 <input class="unsichtbar" id="file" type="file" accept="image/*"/>
