--- a/html/pages/showuser.html
+++ b/html/pages/showuser.html
@@ -33,32 +33,32 @@
         <ul class="list">
             <li class="list__item">
                 <div class="list__item__center">
-                    <input type="text" class="text-input" placeholder="Vorname" id="contact_surname" disabled>
+                    <div id="contact_surname" ></div>
                 </div>
             </li>
             <li class="list__item">
                 <div class="list__item__center">
-                    <input type="text" class="text-input" placeholder="Nachname" id="contact_name" disabled>
+                        <div id="contact_name" ></div>
                 </div>
             </li>
             <li class="list__item">
                 <div class="list__item__center">
-                    <input type="text" pattern="[0-9]*" class="text-input" placeholder="Telefon" id="contact_phone" disabled>
+                        <div id="contact_phone" ></div>
                 </div>
             </li>
             <li class="list__item">
                 <div class="list__item__center">
-                    <input type="email" class="text-input" placeholder="E-Mail" id="contact_email" disabled>
+                        <div id="contact_email" ></div>
                 </div>
             </li>
             <li class="list__item">
                 <div class="list__item__center">
-                    <input type="text" class="text-input" placeholder="Strasse" id="contact_road" disabled>
+                        <div id="contact_road" ></div>
                 </div>
             </li>
             <li class="list__item">
                 <div class="list__item__center">
-                    <input type="text" class="text-input" placeholder="PLZ/ Ort" id="contact_place" disabled>
+                        <div id="contact_place" ></div>
                 </div>
             </li>
             <li class="list__item">
