--- a/html/pages/showgroup.html
+++ b/html/pages/showgroup.html
@@ -5,7 +5,8 @@
             <img class="list__item__thumbnail profilepicture" src="img/profile.png" alt="Cute kitten" id="contact_img">
         </div>
         <div class="list__item__center">
-            <div class="list__item__title" id="contact_name"></div>
+            <div class="list__item__title" id="contact_surname"></div>
+            <div class="list__item__subtitle" id="contact_name"></div>
         </div>
     </li>
 </ul>
