--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -1,9 +1,9 @@
 <div>
-    <input type="email" id="email">
-    <input type="password" id="password">
-    <input type="password" id="password2" style="display: none;">
-    <button id="login">Login</button>
-    <button id="signup">Singup</button>
+    <input class="inputlogin logintop" type="email" id="email" placeholder="E-Mail">
+    <input class="inputlogin" type="password" id="password" placeholder="Passwort">
+    <input class="inputlogin" type="password" id="password2" placeholder="Passwort wiederholen" style="display: none;">
+    <button class="btn button loginbtn" id="login">Login</button>
+    <button class="btn button button--outline signupbtn" id="signup">Singup</button>
 </div>
 
 
