--- a/html/header/mainscreen.html
+++ b/html/header/mainscreen.html
@@ -1,7 +1,7 @@
 <div id="dark"></div>
     <div id="titel">Simple Contacts
         <span class="right" id="sign_out">
-        <i id="obenrechts" class="material-icons">highlight_off</i></span>
+            <i class="material-icons">input</i>   </span>
 </div>
     <div id="secondarytitel">
         <span class="right" id="add_user">
