--- a/html/pages/login.html
+++ b/html/pages/login.html
@@ -1,6 +1,6 @@
 <div>
-    <input class="inputlogin logintop" type="email" id="email" placeholder="E-Mail" value="janosch.digg@outlook.com">
-    <input class="inputlogin" type="password" id="password" placeholder="Passwort" value="adminadmin">
+    <input class="inputlogin logintop" type="email" id="email" placeholder="E-Mail">
+    <input class="inputlogin" type="password" id="password" placeholder="Passwort">
     <input class="inputlogin" type="password" id="password2" placeholder="Passwort wiederholen" style="display: none;">
     <button class="btn button loginbtn" id="login">Login</button>
     <button class="btn button button--outline signupbtn" id="signup">Signup</button>
