--- a/html/pages/showuser.html
+++ b/html/pages/showuser.html
@@ -2,15 +2,16 @@
 
  <div class="button-bar" style="width:90%; margin-left: 5%; margin-bottom: 20px;">
     <div class=" button-bar__item">
-      <button onclick="anrufen()" class="button-bar__button" id="calltouser">Anrufen</button>
+      <button class="button-bar__button" id="calltouser">Anrufen</button>
     </div>
     <div class=" button-bar__item">
-      <button onclick="message()" class="button-bar__button" id="smstouser">Nachricht</button>
+      <button class="button-bar__button" id="smstouser">Nachricht</button>
     </div>
     <div class=" button-bar__item">
-      <button onclick="mail()" class="button-bar__button" id="emailtouser">Mail</button>
+      <button class="button-bar__button" id="emailtouser">Mail</button>
     </div>
   </div>
+
 
 <div id="contact_id"></div>
 
