--- a/html/pages/edituser.html
+++ b/html/pages/edituser.html
@@ -38,4 +38,4 @@
                 </li>
         </ul>
     </div>
-<input class="unsichtbar" id="file" type="file" accept="image/*"/>
+<input class="unsichtbar" id="file" type="file" accept="image/*" style="display: none"/>
