--- a/html/pages/editgroup.html
+++ b/html/pages/editgroup.html
@@ -6,4 +6,4 @@
                 <input type="text" class="text-input" placeholder="Gruppenname" id="group_name"> </div>
         </li>
     </ul>
-    <input class="unsichtbar" id="file" type="file" accept="image/*"/>
+    <input class="unsichtbar" id="file" type="file" accept="image/*"  style="display: none"/>
